feat 100% new files done

--- a/index-ru.html
+++ b/index-ru.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Онлайн школа - Академии елбасы </title>
+    <title>Онлайн школа Академии Елбасы </title>
     <!--  Подключение файла гланого файла анимации  -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- Подключение файла с анимацией -->
@@ -20,12 +20,12 @@
 <body>
 
     <!---------- Preloader ---------->
-    <div class="preloader">
+    <!-- div class="preloader">
         <div class="preloader__row">
             <div class="preloader__item"></div>
             <div class="preloader__item"></div>
         </div>
-    </div>
+    </div -->
     <!---------- Preloader ---------->
 
     <header class="header" id="header">
@@ -43,17 +43,17 @@
                 </div>
                 <!-- /.header__content-logo -->
                 <nav class="nav menu__nav wow fadeInDown" data-wow-delay="0.5s">
-                    <a href="files/school-pdf.pdf" download class="nav__item">
+                    <a href="files/birgeoqy_ru.pdf" download class="nav__item">
                         <!-- жоба туралы -->
                         <img src="img/button/01-ru.png" alt="жоба туралы" class="nav__item-img">
                     </a>
                     <!-- /.nav__item -->
-                    <a href="files/school-pdf.pdf" download class="nav__item">
+                    <a href="#" class="nav__item popup-btn-ata">
                         <!-- ата-анаға -->
                         <img src="img/button/03-ru.png" alt="ата-анаға" class="nav__item-img">
                     </a>
                     <!-- /.nav__item -->
-                    <a href="files/school-pdf.pdf" download class="nav__item">
+                    <a href="files/uchenik.jpg" download class="nav__item">
                         <!-- оқушыға -->
                         <img src="img/button/02-ru.png" alt="оқушыға" class="nav__item-img">
                     </a>
@@ -76,9 +76,12 @@
                 <!-- /.menu-toggle -->
                 <nav class="mob-menu">
                     <ul class="menu">
-                        <li data-text="Home"><a href="files/school-pdf.pdf" class="mobile__download-link" download>о проекте</a></li>
-                        <li data-text="Projects"><a href="files/school-pdf.pdf" class="mobile__download-link" download>родителю</a></li>
-                        <li data-text="About"><a href="files/school-pdf.pdf" class="mobile__download-link" download>ученику</a></li>
+                        <li data-text="о проекте"><a href="files/birgeoqy_ru.pdf" class="mobile__download-link"
+                                download>о проекте</a></li>
+                        <li data-text="родителю"><a href="files/soglashenie_ru.pdf" class="mobile__download-link"
+                                download>родителю</a></li>
+                        <li data-text="ученику"><a href="files/uchenik.jpg" class="mobile__download-link"
+                                download>ученику</a></li>
                         <li class="popup-btn">контакты</li>
                     </ul>
                 </nav>
@@ -98,14 +101,14 @@
                         </div>
                         <!-- /.hero__content-logo hero__logo -->
                         <span class="hero__title-desc-ru wow fadeInLeft" data-wow-delay="0.5s">
-                            Онлайн школа
+                            онлайн школа
                         </span>
                         <!-- /.hero__title-desc -->
                         <h1 class="hero__section-title hero__title-ru title wow slideInUp" data-wow-delay="0.5s">
                             АКАДЕМИИ ЕЛБАСЫ
                         </h1>
                         <!-- /.hero__section-title title -->
-                        <a href="https://bilimland.kz/ru/login" class="btn hero__btn hero__btn-primary">
+                        <a href="https://onlinemektep.org/login" class="btn hero__btn hero__btn-primary">
                             <span>войти<span>
                         </a>
                         <!-- /.btn hero__btn hero__btn-primary -->
@@ -137,15 +140,16 @@
             <div class="footer__content">
                 <div class="footer__social">
                     <div class="social__icon">
-                        <a href="https://www.youtube.com/channel/UC9nAqSXFXJSJi5qe1xBTNTA" class="footer__social-link">
+                        <a href="https://www.youtube.com/channel/UC9nAqSXFXJSJi5qe1xBTNTA" target="_blank"
+                            class="footer__social-link">
                             <img src="img/youtube.svg" alt="Youtube">
                         </a>
                         <!-- /.footer__social-link -->
-                        <a href="https://www.facebook.com/birgeoku/" class="footer__social-link">
+                        <a href="https://www.facebook.com/birgeoku/" target="_blank" class="footer__social-link">
                             <img src="img/facebook.svg" alt="Facebook">
                         </a>
                         <!-- /.footer__social-link -->
-                        <a href="https://www.instagram.com/birgeoku" class="footer__social-link">
+                        <a href="https://www.instagram.com/birgeoku" target="_blank" class="footer__social-link">
                             <img src="img/instagram.svg" alt="Instagram">
                         </a>
                         <!-- /.footer__social-link -->
@@ -154,12 +158,10 @@
                 </div>
                 <div class="footer__language">
                     <a href="/index.html" class="footer__language-item kaz">
-                        каз
-                    </a>
+                        ҚАЗ</a>
                     <!-- /.footer__language-item kaz -->
                     <a href="#" class="footer__language-item lang__active ru">
-                        рус
-                    </a>
+                        RU</a>
                     <!-- /.footer__language-item ru -->
                 </div>
                 <!-- /.footer__language -->
@@ -185,7 +187,7 @@
                     <img src="img/global.svg" alt="Сайт">
                     <a href="https://www.fnn.kz/main/index" class="popup__link-web">
                         www.fnn.kz
-                    </a> 
+                    </a>
                     <!-- /.popup__link-web -->
                 </div>
                 <!-- /.popup__content-link-website -->
@@ -193,7 +195,7 @@
                     <img src="img/email.svg" alt="E-mail">
                     <a href="#" class="popup__link-email">
                         a.arshabayeva@elumiti.kz
-                    </a> 
+                    </a>
                     <!-- /.popup__link-email -->
                 </div>
                 <!-- /.popup__content-link-email -->
@@ -205,6 +207,41 @@
                     <!-- /.popup__link-tel -->
                 </div>
                 <!-- /.popup__content-link-tel -->
+            </div>
+            <!-- /.popup__content-link -->
+        </div>
+        <!-- /.popup-content -->
+    </div>
+    <!-- /.popup -->
+
+    <!-- Модальное окно Для вкладки родители -->
+    <div class="popup-ata">
+        <div class="popup-content-ata">
+            <button class="popup-close-ata">
+                &times;
+            </button>
+            <!-- /.popup-close -->
+            <h3 class="popup__title">
+                Информация для родителей и законных представителей
+            </h3>
+            <!-- /.popup__title -->
+            <div class="popup__content-link">
+                <div class="popup__content-link-website">
+                    <img src="img/icon-pdf.svg" alt="Пайдаланушы келісімі">
+                    <a href="files/kelisim_kz.pdf" download class="popup__link-web">
+                        Пользовательское соглашение
+                    </a>
+                    <!-- /.popup__link-web -->
+                </div>
+                <!-- /.popup__content-link-website -->
+                <div class="popup__content-link-email">
+                    <img src="img/pam-pdf.svg" alt="E-mail">
+                    <a href="files/ata_ana.jpg" class="popup__link-email">
+                        Памятка
+                    </a>
+                    <!-- /.popup__link-email -->
+                </div>
+                <!-- /.popup__content-link-email -->
             </div>
             <!-- /.popup__content-link -->
         </div>
